# jookbachs-rs

./: .gitignore  Cargo.toml  index.html
migrations/2019-12-12-222526_create_artist_table/: down.sql  up.sql
migrations/2019-12-12-230312_create_albums_table/: up.sql
migrations/2019-12-12-230613_create_tracks_table/: down.sql  up.sql
src/: bootstrap.rs  env.rs  main.rs  schema.rs
src/controllers/: album_controller.rs  artist_controller.rs  mod.rs  track_controller.rs
src/models/: albums.rs  artists.rs  mod.rs  tracks.rs
