[package]
name = "jookbachs-rs"
version = "0.1.0"
authors = ["Robb Currall <robert@currall.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web   = "2.0.0-alpha.2"
actix-files = "0.2.0-alpha.2"
actix-rt    = "1.0.0-alpha.2"
actix-cors  = "0.2.0-alpha.1"
chrono      = "0.4.10"
diesel      = { version = "1.4.3", features = ['sqlite', 'r2d2'] }
id3         = "0.3.0"
serde       = "1.0.103"
serde_json  = "1.0.44"
